dbcs-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-csharp
spec:
  selector:
    matchLabels:
      app: postgrescsharp
  replicas: 1
  template:
    metadata:
      labels:
        app: postgrescsharp
    spec:
      containers:
        - name: apichsarp-db
          image: postgres:12
          ports:
            - containerPort: 5432



---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgrescsharp
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
